# weekly

./: .env-example  .gitignore  README.md  config.yaml  generated_highlight_samples-test.csv  generated_highlight_samples-train.csv  generated_highlight_samples.csv  highlight-examples.txt  orgcontext.txt  pyproject.toml  this_weeks_outcomes.csv  trainable_data.json  workstream-importance.txt
src/weekly/: datagen.py  datagen2.py  declassifier.py  evals.py  main.py
