[tool.poetry]
name = "weekly"
version = "0.1.0"
description = ""
authors = ["shadi-fsai <163780314+shadi-fsai@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<=3.13,>=3.10"
ollama = "^0.4.4"
litellm = "^1.54.0"
distilabel = {extras = ["hf-inference-endpoints"], version = "^1.4.1"}
colored = "^2.2.4"
termcolor = "^2.5.0"
boto3 = "^1.35.86"
opik = "^1.3.0"

[tool.poetry.scripts]
weekly = "weekly.main:main"
declassifier = "weekly.declassifier:main"
datagen = "weekly.datagen:main"
transform_to_trainable_json = "weekly.datagen:transform_to_trainable_json"
evals = "weekly.evals:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
